@@ -1,8 +1,8 @@
 /* */
 #define VERSION "1.31"
 #define VSTRING "1"
-#define BDATE   "22 Jul 2003"
-#define LSMDATE "22Jul03"
+#define BDATE   "28 Jul 2003"
+#define LSMDATE "28Jul03"
 
 /* Debug flags */
 #define DEBUG 1
